fix student membership registration

--- a/src/frontend/inner-balance/src/app/components/register-student/register-student.component.html
+++ b/src/frontend/inner-balance/src/app/components/register-student/register-student.component.html
@@ -18,7 +18,7 @@
     <label for="membership"><b>Membership</b></label>
 
     <select name="membership" id="membership" formControlName="membership">
-        <option *ngFor="let item of memberships" value="item.value">{{item.name}}</option>
+        <option *ngFor="let item of memberships" [value]="item.value">{{item.name}}</option>
     </select>
 
     <button type="submit" [disabled]="formGroup.invalid">Register</button>
